# Stremio-Kai-W11Arm64

./: .gitmodules  README.md  stremio.rc
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
docs/: GOODBYE.md  WINDOWS.md  changelog.css  changelog.html  changelog.js  index.html  robots.txt  script.js  sitemap.xml  styles.css
portable_config/: input.conf  mpv.conf
portable_config/scripts/: profile-manager.lua
portable_config/scripts/notify_skip/: main.lua
portable_config/scripts/smart-track-selector/: main.lua
portable_config/webmods/Metadata/Services/: mpv-bridge.js
portable_config/webmods/Settings/: custom-shortcuts.js  enhanced-metadata.js  mpv-settings.js
portable_config/webmods/Theme/: Board.css  Discover.css  Library.css  Main.css
portable_config/webmods/UI/: details-enhancer.js  hover-popup.js  update-notification.js  welcome-wizard.js
portable_config/webmods/UI/Hero Banner/: HeroBanner.css
portable_config/webmods/UI/Hero Banner/modules/: ui.js
portable_config/webmods/Utilities/: navigation.js
src/: main.cpp  resource.h
src/mpv/: player.h
src/ui/: mainwindow.h  splash.h
src/utils/: config.h  crashlog.cpp  crashlog.h  extensions.cpp  extensions.h
src/webview/: webview.cpp  webview.h
stremio-build-src/: CMakeLists.txt  deploy-arm64.ps1
stremio-build-src/docs/: RELEASE.md
stremio-build-src/extensions/: extensions.json  stylus_2.3.10_0.7z  ublock_1.62.0_0.7z
stremio-build-src/src/: main.cpp
stremio-build-src/src/core/: globals.cpp  globals.h
stremio-build-src/src/mpv/: player.cpp
stremio-build-src/src/node/: server.cpp  server.h
stremio-build-src/src/tray/: tray.cpp  tray.h
stremio-build-src/src/ui/: mainwindow.cpp  splash.cpp
stremio-build-src/src/updater/: updater.cpp  updater.h
stremio-build-src/src/utils/: config.cpp  crashlog.cpp  discord.cpp  discord.h  helpers.cpp  helpers.h
stremio-build-src/src/webview/: webview.cpp
stremio-build-src/utils/chocolatey/: stremio-desktop-v5.5.0.18.nupkg  stremio-desktop-v5.5.0.21.nupkg  stremio-desktop-v5.5.0.8.nupkg
stremio-build-src/utils/mpv/: Default Portable Config.7z  README.md
stremio-build-src/utils/mpv/anime4k/portable_config/: input.conf
stremio-build-src/utils/mpv/anime4k/portable_config/scripts/: skip-intro.lua
stremio-build-src/utils/scoop/: stremio-desktop-v5.json
stremio-build-src/utils/webmods/: liquid-glass-theme-v1.rar
stremio-build-src/utils/windows/installer/: windows-installer.nsi
stremio-build-src/version/: version.json
utils/chocolatey/: stremio-desktop-v5.5.0.14.nupkg  stremio-desktop-v5.5.0.19.nupkg  stremio.nuspec
utils/chocolatey/tools/: chocolateyUninstall.ps1  chocolateyinstall.ps1
utils/mpv/anime4k/portable_config/: mpv.conf
utils/stremio/: stremio-settings.ini
utils/webmods/: fullscreen-on-launch.7z
utils/windows/installer/: windows-installer.nsi
version/: version-details.json
